[gd_scene load_steps=9 format=3 uid="uid://d3st85uxmedtn"]

[ext_resource type="Script" path="res://src/enemy.gd" id="1_6qitr"]
[ext_resource type="Texture2D" uid="uid://bo4e8p2kbvsxu" path="res://Asset/enemy1/tile_0340.png" id="1_mh6ip"]
[ext_resource type="Texture2D" uid="uid://ewjo5nc3ojc0" path="res://Asset/enemy1/tile_0341.png" id="3_68x5t"]
[ext_resource type="Texture2D" uid="uid://dn0pfydw4nrsd" path="res://Asset/enemy1/tile_0342.png" id="4_y3nb8"]
[ext_resource type="Texture2D" uid="uid://dl4e80r6rgkfj" path="res://Asset/enemy1/tile_0343.png" id="5_i3qrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uehnn"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62wnc"]
size = Vector2(16, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_efni7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_68x5t")
}, {
"duration": 1.0,
"texture": ExtResource("4_y3nb8")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mh6ip")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_i3qrn")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_6qitr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_uehnn")

[node name="KillBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_62wnc")
debug_color = Color(0.901961, 0, 0.752941, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemyAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_efni7")
animation = &"jump"

[connection signal="body_entered" from="KillBox" to="." method="bodyEntered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
